# openspoor

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  LICENSE  README.md  ROUTE_REFACTORING_EXAMPLE.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code_quality.yml  code_quality_linux.yml  code_quality_windows.yml  docs.yml  pytest.yml  python-publish.yml
data/: readme.md
data/Versie_03/: BBMS_BERICHT_3.csv  BBMS_SPOORTAK_HISTORIE_3.csv  GEOCODE_3.dbf  GEOCODE_3.shp  GEOCODE_3.shx  PROCESCONTRACTGEBIED_3.csv  PROCESCONTRACTGEBIED_3.dbf  PROCESCONTRACTGEBIED_3.shp  PROCESCONTRACTGEBIED_3.shx  SPOORLIJN_3.dbf  SPOORLIJN_3.shp  SPOORLIJN_3.shx  SPOORTAK_3.csv  SPOORTAK_3.shx  SPOORTAK_CONTRACTGEBIED_3.csv  SPOORTAK_GEOCODEKM_GEO_3.csv  SPOORTAK_GEOCODE_GRENZEN_3.csv  SPOORTAK_SNELHEDEN_3.csv  SPOORTAK_SNELHEDEN_3.dbf  SPOORTAK_SNELHEDEN_3.shx  SPOORTAK_SPOOR_WISSEL_NAMEN_3.csv  SPOORTAK_SPOOR_WISSEL_NAMEN_3.dbf  SPOORTAK_SPOOR_WISSEL_NAMEN_3.shx  SPOORTAK_TOPO_3.csv  TRAJECTINDELING_3.csv
data/Versie_04/: BBMS_BERICHT_4.csv  GEOCODE_4.dbf  GEOCODE_4.shp  GEOCODE_4.shx  PROCESCONTRACTGEBIED_4.csv  PROCESCONTRACTGEBIED_4.dbf  PROCESCONTRACTGEBIED_4.shp  PROCESCONTRACTGEBIED_4.shx  SPOORLIJN_4.dbf  SPOORLIJN_4.shp  SPOORLIJN_4.shx  SPOORTAK_4.csv  SPOORTAK_4.shx  SPOORTAK_CONTRACTGEBIED_4.csv  SPOORTAK_GEOCODEKM_GEO_4.csv  SPOORTAK_GEOCODE_GRENZEN_4.csv  SPOORTAK_SNELHEDEN_4.csv  SPOORTAK_SNELHEDEN_4.dbf  SPOORTAK_SNELHEDEN_4.shx  SPOORTAK_SPOOR_WISSEL_NAMEN_4.csv  SPOORTAK_SPOOR_WISSEL_NAMEN_4.dbf  SPOORTAK_SPOOR_WISSEL_NAMEN_4.shx  SPOORTAK_TOPO_4.csv  TRAJECTINDELING_4.csv
data/Versie_05/: BBMS_BERICHT_5.csv  GEOCODE_5.dbf  GEOCODE_5.sbn  GEOCODE_5.sbx  GEOCODE_5.shp  GEOCODE_5.shx  PROCESCONTRACTGEBIED_5.csv  PROCESCONTRACTGEBIED_5.dbf  PROCESCONTRACTGEBIED_5.sbn  PROCESCONTRACTGEBIED_5.sbx  PROCESCONTRACTGEBIED_5.shp  PROCESCONTRACTGEBIED_5.shx  SPOORLIJN_5.dbf  SPOORLIJN_5.sbn  SPOORLIJN_5.sbx  SPOORLIJN_5.shp  SPOORLIJN_5.shx  SPOORTAK_5.csv  SPOORTAK_5.sbn  SPOORTAK_5.sbx  SPOORTAK_5.shp  (+17 more)
demo_notebook/: openspoor_example.ipynb  spoortakmapper.ipynb  visualisations demo notebook.ipynb
docs/: index.md  installation.md  quickstart.md
openspoor/: __init__.py  config.yaml
tests/: test_Acceptance.py  test_MapservicesData.py  test_PUICMapservices.py  test_TransformerCoordinatesToSpoor.py  test_TransformerGeocodeToCoordinates.py  test_TransformerSpoortakToCoordinates.py  test_feature_mapservice.py  test_find_mapservice.py
(+692 files in other folders)
