[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openspoor"
version = "0.2.9"
description = "Open source project to allow translations between different spoor referential systems"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "openspoor"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
geopandas = "^1.0.1"
pyyaml = "^6.0.2"
loguru = "^0.7.3"
requests = "^2.32.3"
pyproj = "^3.7.1"
pandas = "^2.2.3"
shapely = "^2.0.7"
numpy = "^2.2.3"
fiona = "^1.10.1"
importlib-metadata = "^8.6.1"
folium = "^0.19.4"
parameterized = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.0"
pytest-cov = "^6.0.0"
mypy = "^1.15.0"
pandas-stubs = "^2.2.3.241126"
types-shapely = "^2.0.0.20250202"
types-geopandas = "^1.0.1.20250120"
