[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openspoor"
version = "0.3.2"
description = "Open source project to allow translations between different spoor referential systems"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "geopandas>=1.0.1,<2",
    "pyyaml>=6.0.2,<7",
    "loguru>=0.7.3,<0.8",
    "requests>=2.32.3,<3",
    "pyproj>=3.7.1,<4",
    "pandas>=2.2.3,<3",
    "shapely>=2.0.7,<3",
    "numpy>=2.2.3,<3",
    "fiona>=1.10.1,<2",
    "importlib-metadata>=8.6.1,<9",
    "folium>=0.19.4,<0.20",
    "parameterized>=0.9.0,<0.10",
    "types-pyyaml>=6.0.12.20241230,<7",
    "types-requests>=2.32.0.20241016,<3",
    "types-geopandas>=1.0.1.20250120",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "black>=25.1.0,<26",
    "flake8>=7.1.2,<8",
    "isort>=6.0.0,<7",
    "pytest-cov>=6.0.0,<7",
    "mypy>=1.15.0,<2",
    "pandas-stubs>=2.2.3.241126,<3",
    "types-shapely>=2.0.0.20250202,<3",
    "types-geopandas>=1.0.1.20250120,<2",
    "autoflake>=2.3.1,<3",
    "types-setuptools>=75.8.0.20250225,<76",
    "pdoc3>=0.11.5,<0.12",
    "nbmake>=1.5.5,<2",
    "pytest-xdist>=3.6.1,<4",
    "pre-commit>=4.1.0,<5",
]

[tool.hatch.build.targets.sdist]
include = ["openspoor"]

[tool.hatch.build.targets.wheel]
include = ["openspoor"]

[tool.setuptools]
packages = ["openspoor"]
